2009-09-22  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam-manager-properties.ui,
	  capplet/nwam-manager-wireless.ui:
	  Split out wireless dialog and chooser to separate ui file to speed
	  up loading and lower memory consumption for panel applet.
	* common/libnwamui.c, common/libnwamui.h:
	  Remove old GLADE code, and update gtk builder loading to support
	  multiple XML file sources.
	* capplet/nwam_wireless_chooser.c, capplet/nwam_wireless_dialog.c: 
	  Update to use changed API to load wireless specific .ui file.
	* capplet/Makefile.am:
	  Remove .ui files.
	* configure.in, ui/Makefile.am, Makefile.am:
	  Prepare a new location for the .ui files.

2009-09-22  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  Bump to 0.99.10
	* nwam_core/lib/i386/libnwam.so.1, nwam_core/lib/sparc/libnwam.so.1:
	  Update for 09/21 nwamd build with new API.

2009-09-21  Darren Kenny  <darren.kenny@sun.com>

	* nwam_core/usr/include/libnwam.h:
	  Update to latest as of 09/21.
	* common/nwamui_daemon.c: 
	  Make changes necessary to build due to API change.

2009-09-21  Darren Kenny  <darren.kenny@sun.com>

	* help/C/nwam-manager.xml:
	  Update to latest version of OLH (09/16)
	* capplet/nwam_wireless_chooser.c, daemon/status_icon.c:
	  Point help items are appropriate locations in help documents.
	* capplet/nwam-manager-properties.ui:
	  Fix help button response code for wireless chooser dialog.

2009-09-21  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_rules_dialog.c: 
	  Fix defect#9656 where the selection of All or Any was possible when
	  only one condition was available.
	* common/nwamui_cond.c: 
	  Fix defect#9650 - change 'does not include' to 'do not include'
	* capplet/nwam_condition_vbox.h, capplet/nwam_condition_vbox.c: 
	  Several fixes:
	  - Hide selection of Location when setting conditions on a location.
	  - Don't call table_lines_free() when refreshing table since
	    table_lines_init() expects rows to still be there to add them to the